<resources>
    <string name="app_name">Từ điển thực vật</string>
    <string name="img">Image</string>

    <string name="organ">Organ</string>
    <string name="flower">Hoa</string>
    <string name="leaf">Lá</string>
    <string name="fruit">Quả</string>
    <string name="bark">Thân</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="searchPlant">Tìm loài</string>
    <string name="name">Name</string>
    <string name="content">Content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_select_image">SelectImage</string>
    <string name="select_image">Chọn ảnh: </string>
    <!--
    This string is used for square devices and overridden by hello_world in
...
